--- a/styles/style.css
+++ b/styles/style.css
@@ -7,64 +7,61 @@
      justify-content: space-between;
      align-items: flex-start;
      width: 1052px;
-     height: 105px;
      margin-top: 94px;
      margin-left: 24px;
  }
 
  .header__menu {
-     width: 391.48px;
-     height: 22px;
-     padding-top: 44px;
-     padding-left: 26.52px;
-     font-family: 'Raleway';
+     padding-top: 42.3px;
+     padding-left: 25px;
+     font-family: 'Raleway' sans-serif;
      font-weight: 400;
      font-size: 18px;
      line-height: 21.13px;
+     letter-spacing: .01em;
  }
  
  .header__links-list {
      display: flex;
      flex-direction: row;
-     white-space: nowrap;
      list-style-type: circle;
-     gap: 40px;
+     gap: 30.5px;
  }
  
  .header__links-list-item {
-     white-space: nowrap;
+    text-underline-offset: 3px;
  }
  
  .header__link_active {
+     height: 21px;
      text-decoration: none;
+     list-style: none;
  }
  
  .header__logo {
      display: flex;
      justify-self: center;
-     width: 148px;
      height: 105px;
  }
  
  .header__logo-image {
-     width: 148px;
-     height: 105px;
-     margin-left: 38.52px;
+     margin-right: 145px;
  }
  
- .header__address {
-     width: 240.52px;
-     margin-left: 184px;
+ .address {
+     min-width: 240.52px;
      font-weight: 400;
      font-size: 18px;
      line-height: 24.3px;
      font-style: normal;
+     margin-right: 25px;
+     margin-top: 5px;
+     text-underline-offset: 3px;
  }
  
  .cover {
      display: grid;
      grid-template-columns: 800px 300px;
-     grid-template-rows: 655px 102px;
      grid-auto-flow: row;
      grid-template-areas: 
        "title title"
@@ -76,14 +73,18 @@
      width: 1100px;
      margin-top: 94px;
      position: relative;
+     z-index: 0;
  }
  
  .overlay {
      position: absolute;
+     top: 0;
+     left: 0;
      width: 100%;
      height: 100%;
      opacity: 60%;
      background-color: rgb(0 0 0 );
+     z-index: -1;
  }
    
  .cover__title {
@@ -91,34 +92,31 @@
      justify-self: center;
      grid-column: span 2;
      width: 1000px;
-     height: 355px;
      text-transform: uppercase;
      letter-spacing: 30px;
      font-size: 100px;
-     font-weight: 700px;
+     font-weight: 700;
      margin-top: 165px;
      line-height: 115px;
      color: #fff;
+     row-gap: 13px;
  }
  
  .aligned-text {
      display: flex;
      justify-content: start;
-     margin-bottom: 10px;
  }
  
  .aligned-text_center {
      display: flex;
      justify-content: center;
-     width: 369px;
-     margin-left: 306px;
+     margin-right: 30px;
  }
  
  .aligned-text_right {
      display: flex;
      justify-content: end;
-     width: 417px;
-     margin-left: 633px;
+     padding-left: 585px;
  }
  
  .letter-spacing {
@@ -126,24 +124,26 @@
  }
  
  .cover_subline {
-     width: 637px;
-     height: 28px;
      font-size: 22px;
      text-transform: uppercase;
      font-weight: 400;
-     color: rgb(241, 228, 228);
-     line-height: 28px;
-     word-spacing: 15px;
+     color:#ffffff;
+     word-spacing: 18.5px;
      margin-left: 78px;
-     margin-top: 0px;
+     margin-top: 130px;
+     margin-bottom: 63px;
  }
  
  .bet-button {
+    font-family: 'Raleway', sans-serif;
      width: 256px;
      height: 51px;
      margin-top: 0;
      background-color: transparent;
      border-color: #fff;
+     line-height: 25.83px;
+     padding-right: 20px;
+
  }
  
   .text__decoration {
@@ -156,7 +156,6 @@
  
  .lots {
      width: 1052px;
-     height: 692px;
      margin-top: 179px;
      margin-left: 24px;
  }
@@ -172,29 +171,31 @@
  .lots__card-list {
      display: grid;
      grid-template-columns: 334px 334px 334px;
-     grid-template-rows: 563px;
-     gap: 30px;
+     gap: 25px;
      list-style-type: none;
  }
  
  .card {
      display: flex;
      flex-direction: column;
+     justify-content: space-around;
      align-items: start;
-     align-content: end;
+     background-position: center;
+     background-size: cover;
      width: 100%;
      height: 563px;
+     position: relative;
+     z-index: 0;
  }
  
  .card__title {
-    width: 284px;
-    height: 82px;
     padding-top: 45px;
     padding-left: 40px;
+    padding-right: 40px;
     font-size: 22px;
-    font-weight: 700px;
+    font-weight: 700;
     text-decoration: underline;
-    font-style: solid;
+    font-style: normal;
     text-transform: uppercase;
     color: rgba(255, 255, 255, 1);
     position: relative;
@@ -204,64 +205,49 @@
  .card__text {
     display: flex;
     align-items: flex-end;
+    min-height: 360px;
     font-size: 20px;
-    font-weight: 400px;
+    font-weight: 400;
     color: rgb(255 255 255);
     text-decoration: none;
     margin-left: 40px;
     margin-right: 40px;
     margin-bottom: 48px;
-    min-height: 436px;
     line-height: 24px;
     position: relative;
  }
  
  .card_type_film {
-     width: 100%;
-     height: 563px;
      background-image: url(../images/card-lot-01.jpg);
-     background-position: center;
-     background-size: 160%;
-     position: relative;
  }
  
  .card_type_book {
-     width: 100%;
-     height: 563px;
      background-image: url(../images/card-lot-02.jpg);
-     background-position: center;
-     background-size: 160%;
-     position: relative;
  }   
  
  .card_type_picture {
-     width: 100%;
-     height: 563px;
      background-image: url(../images/card-lot-03.jpg);
-     background-position: center ;
-     position: relative;
+
  }   
  
  .lots__look-more-link {
      display: flex;
-     width: 192px;
      height: 23px;
+     font-size: 20px;
      margin-left: 40px;
-     margin-top: 35px;
+     margin-top: 33px;
  }
  
  .about {
      width: 1052px;
-     height: 595px;
      margin-top: 146px;
      margin-left: 24px;
  }
  
  .about__column {
-     width: 1052 px;
+     width: 1052px;
      display: grid;
-     grid-template-columns: 240px 693px;
-     grid-template-rows: 240px 449px;
+     grid-template-columns: 240px 765px;
      column-gap: 30px;
  }
  
@@ -284,35 +270,41 @@
  }
  
  .about__article {
-     width: 693px;
-     height: 449px;
      padding-top: 133px;
      margin-left: 72px;
  }
  
  .about__title {
-     font-weight: 700px;
+     font-weight: 700;
      font-size: 40px;
      line-height: 24.96px;
      text-transform: uppercase;
+     margin-top: 15px;
+     margin-bottom: 110px;
+     margin-left: 17px;
  }
  
  .about__text {
-     font-weight: 400px;
+     font-weight: 400;
      font-size: 20px;
      line-height: 24px;
-     padding-top: 103px;
      align-items: end;
+     display: block;
+     margin-top: 1.01em;
+     margin-bottom: 1.01em;
+     margin-left: 17px;
+     letter-spacing: .01em;
  }
  
  .footer {
      width: 1000px;
-     height: 98px;
-     margin-top: 180px;
+     margin-top: 160px;
      margin-left: 50px;
      display: flex;
      flex-direction: row;
+     justify-content: flex-start;
      justify-content: space-between;
+     column-gap: 160px;
  }
  
  .footer__menu-list {
@@ -320,6 +312,11 @@
      flex-direction: column;
      align-items: center;
      list-style-type: none;
+     font-size: 18px;
+     min-width: 149px;
+     margin-right: 10px;
+     margin-top: 5px;
+
  }
  
  .footer__address {
@@ -331,11 +328,13 @@
  }
  
  .footer__social-list {
- width: 240px;
- height: 48px;
- display: flex;
- justify-content: space-between;
- align-items: flex-start;
- gap: 48px;
- list-style-type: none;
+     display: flex;
+     justify-content: space-between;
+     align-items: flex-start;
+     gap: 48px;
+     list-style-type: none;
+     margin-left: 12px;
+     margin-top: 5px;
  }
+
+ 
