--- a/styles/style.css
+++ b/styles/style.css
@@ -3,9 +3,10 @@
  }
  
  .header {
-     display: flex;
-     justify-content: space-between;
-     align-items: flex-start;
+     display: grid;
+     grid-template-columns: 1fr min-content 1fr;
+     justify-items: end;
+     align-items: normal;
      width: 1052px;
      margin-top: 94px;
      margin-left: 24px;
@@ -13,8 +14,8 @@
 
  .header__menu {
      padding-top: 42.3px;
-     padding-left: 25px;
-     font-family: 'Raleway' sans-serif;
+     margin-right: 45px;
+     font-family: 'Raleway', sans-serif;
      font-weight: 400;
      font-size: 18px;
      line-height: 21.13px;
@@ -32,11 +33,13 @@
     text-underline-offset: 3px;
  }
  
+.header__links-list-item_no-bullet {
+    list-style-type: none;
+}
+
  .header__link_active {
-     height: 21px;
-     text-decoration: none;
-     list-style: none;
- }
+    text-decoration: none;
+}
  
  .header__logo {
      display: flex;
@@ -45,23 +48,24 @@
  }
  
  .header__logo-image {
-     margin-right: 145px;
+     margin-right: 130px;
+    
  }
  
  .address {
-     min-width: 240.52px;
+     max-width: 240.52px;
      font-weight: 400;
      font-size: 18px;
      line-height: 24.3px;
      font-style: normal;
-     margin-right: 25px;
+     margin-right: 60px;
      margin-top: 5px;
      text-underline-offset: 3px;
  }
  
  .cover {
      display: grid;
-     grid-template-columns: 800px 300px;
+     grid-template-columns: 795px 315px;
      grid-auto-flow: row;
      grid-template-areas: 
        "title title"
@@ -91,12 +95,12 @@
      display: grid;
      justify-self: center;
      grid-column: span 2;
-     width: 1000px;
      text-transform: uppercase;
      letter-spacing: 30px;
      font-size: 100px;
      font-weight: 700;
      margin-top: 165px;
+     margin-left: 20px;
      line-height: 115px;
      color: #fff;
      row-gap: 13px;
@@ -105,6 +109,7 @@
  .aligned-text {
      display: flex;
      justify-content: start;
+     text-align: start;
  }
  
  .aligned-text_center {
@@ -135,15 +140,12 @@
  }
  
  .bet-button {
-    font-family: 'Raleway', sans-serif;
+     font-family: 'Raleway', sans-serif;
      width: 256px;
      height: 51px;
      margin-top: 0;
      background-color: transparent;
-     border-color: #fff;
      line-height: 25.83px;
-     padding-right: 20px;
-
  }
  
   .text__decoration {
@@ -152,6 +154,7 @@
      text-align: center;
      font-weight: 500;
      color: rgb(255, 255, 255);
+     border: 1px solid #fff;/*?*/
   }
  
  .lots {
@@ -178,18 +181,23 @@
  .card {
      display: flex;
      flex-direction: column;
-     justify-content: space-around;
+     justify-content: space-between;
      align-items: start;
      background-position: center;
      background-size: cover;
      width: 100%;
-     height: 563px;
+     min-height: 563px;
      position: relative;
      z-index: 0;
  }
  
+
+.lots__card-list-item {
+    text-decoration: none;
+}
+
  .card__title {
-    padding-top: 45px;
+    padding-top: 50px;
     padding-left: 40px;
     padding-right: 40px;
     font-size: 22px;
@@ -205,7 +213,6 @@
  .card__text {
     display: flex;
     align-items: flex-end;
-    min-height: 360px;
     font-size: 20px;
     font-weight: 400;
     color: rgb(255 255 255);
@@ -232,7 +239,6 @@
  
  .lots__look-more-link {
      display: flex;
-     height: 23px;
      font-size: 20px;
      margin-left: 40px;
      margin-top: 33px;
@@ -300,10 +306,10 @@
      width: 1000px;
      margin-top: 160px;
      margin-left: 50px;
-     display: flex;
-     flex-direction: row;
-     justify-content: space-between;
-     column-gap: 160px;
+     display: grid;
+     grid-template-columns: 1.25fr 1fr .7fr;
+     justify-items: start;
+     align-items: normal;
  }
  
  .footer__menu-list {
@@ -312,10 +318,7 @@
      align-items: center;
      list-style-type: none;
      font-size: 18px;
-     min-width: 149px;
-     margin-right: 10px;
      margin-top: 5px;
-
  }
  
  .footer__address {
@@ -332,7 +335,6 @@
      align-items: flex-start;
      gap: 48px;
      list-style-type: none;
-     margin-left: 12px;
      margin-top: 5px;
  }
 
