--- a/styles/style.css
+++ b/styles/style.css
@@ -8,12 +8,12 @@
      justify-items: end;
      align-items: normal;
      width: 1052px;
-     margin-top: 94px;
+     padding-top: 92px;
      margin-left: 24px;
  }
 
  .header__menu {
-     padding-top: 42.3px;
+     padding-top: 43px;
      margin-right: 45px;
      font-family: 'Raleway', sans-serif;
      font-weight: 400;
@@ -30,7 +30,7 @@
  }
  
  .header__links-list-item {
-    text-underline-offset: 3px;
+    text-underline-offset: 5px;
  }
  
 .header__links-list-item_no-bullet {
@@ -60,7 +60,7 @@
      font-style: normal;
      margin-right: 60px;
      margin-top: 5px;
-     text-underline-offset: 3px;
+     text-underline-offset: 5px;
  }
  
  .cover {
@@ -75,7 +75,7 @@
      background-size: cover;
      background-position: center;
      width: 1100px;
-     margin-top: 94px;
+     margin-top: 96px;
      position: relative;
      z-index: 0;
  }
@@ -136,7 +136,7 @@
      word-spacing: 18.5px;
      margin-left: 78px;
      margin-top: 130px;
-     margin-bottom: 63px;
+     margin-bottom: 65px;
  }
  
  .bet-button {
@@ -241,7 +241,8 @@
      display: flex;
      font-size: 20px;
      margin-left: 40px;
-     margin-top: 33px;
+     margin-top: 31px;
+     text-underline-offset: 3px;
  }
  
  .about {
@@ -253,7 +254,7 @@
  .about__column {
      width: 1052px;
      display: grid;
-     grid-template-columns: 240px 765px;
+     grid-template-columns: 240px 780px;
      column-gap: 30px;
  }
  
@@ -290,26 +291,40 @@
      margin-left: 17px;
  }
  
- .about__text {
+ .about__text_first {
      font-weight: 400;
      font-size: 20px;
      line-height: 24px;
      align-items: end;
      display: block;
      margin-top: 1.01em;
-     margin-bottom: 1.01em;
+     margin-bottom: 1.1em;
      margin-left: 17px;
-     letter-spacing: .01em;
+     letter-spacing: 0.2px;
+     word-spacing: -1px;
  }
  
+ .about__text_second {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 24px;
+    align-items: end;
+    display: block;
+    margin-top: 1.01em;
+    margin-bottom: 18px;
+    margin-left: 17px;
+    letter-spacing: 0.1px;
+    word-spacing: -1px;
+}
  .footer {
      width: 1000px;
      margin-top: 160px;
      margin-left: 50px;
      display: grid;
-     grid-template-columns: 1.25fr 1fr .7fr;
+     grid-template-columns: 1.28fr 1fr .72fr;
      justify-items: start;
      align-items: normal;
+     padding-bottom:  88px;
  }
  
  .footer__menu-list {
@@ -319,6 +334,7 @@
      list-style-type: none;
      font-size: 18px;
      margin-top: 5px;
+     text-underline-offset: 4px;
  }
  
  .footer__address {
