--- a/styles/style.css
+++ b/styles/style.css
@@ -291,34 +291,21 @@
      margin-left: 17px;
  }
  
- .about__text_first {
+ .about__text {
      font-weight: 400;
      font-size: 20px;
      line-height: 24px;
      align-items: end;
      display: block;
-     margin-top: 1.01em;
-     margin-bottom: 1.1em;
+     margin-top: 24px;
      margin-left: 17px;
-     letter-spacing: 0.2px;
+     letter-spacing: 0.15px;
      word-spacing: -1px;
  }
  
- .about__text_second {
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 24px;
-    align-items: end;
-    display: block;
-    margin-top: 1.01em;
-    margin-bottom: 18px;
-    margin-left: 17px;
-    letter-spacing: 0.1px;
-    word-spacing: -1px;
-}
  .footer {
      width: 1000px;
-     margin-top: 160px;
+     margin-top: 176px;
      margin-left: 50px;
      display: grid;
      grid-template-columns: 1.28fr 1fr .72fr;
